Include trailing punctuation in :first-letter

(Also follow CSS's definition of punctuation)

BUG: 197455